@@ -109,7 +109,7 @@ public class BodyPiercing extends CommonSkill
 						injuryA=target.fetchEffect("Injury");
 						if(injuryA!=null)
 						{
-							((LimbDamage)injuryA).damageLimb(bodyPart);
+							((LimbDamage)injuryA).damageLimb(bodyPart, true);
 						}
 					}
 				}
