@@ -73,8 +73,8 @@ AMPUTATION=<ABILITY>\
 Usage    : AMPUTATE [TARGET NAME] [PART]\n\r\
 Example  : amputate orc arm\n\r\
 This ability governs the careful removal of body parts as a punishment for \
-crimes.  The target is, amazingly, not harmed during the procedure, but merely \
-loses the specified limb.  The target must be lying on an operating table or bed, \
+crimes, or from corpses.  A non-corpse target is, amazingly, not harmed during the procedure, but merely \
+loses the specified limb.  Unwilling targets must be lying on an operating table or bed, \
 and bound.  Amputation can also be done to player followers, with their permission.
 
 THIEF_ANALYZEMARK=ANALYZE_MARK
